--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <div class="pin" style="left: 400px;top: 400px"><img src="img/avatars/simpson.png" alt="User Avatar" class="rounded" width="40" height="40"></div>
       <div class="pin"><img src="img/avatars/default.png" alt="User Avatar" class="rounded" width="40" height="40"></div>
     </div>
-    <div class="dialog">
+    <div class="dialog dialog__invisible">
       <div class="dialog__title"><img src="img/avatars/avatar.png" alt="Avatar" width="70" height="70">
         <a href="#" class="dialog__close"><img src="img/close.svg" alt="close" width="22" height="22"></a>
       </div>
@@ -120,15 +120,15 @@
         <div class="form__panel">
           <div class="form__element  form__element--wide">
             <label for="title">Заголовок объявления</label>
-            <input id="title" type="text" placeholder="Милая, уютная квартирка, например">
+            <input id="title" type="text" minlength="30" maxlength="100" placeholder="Милая, уютная квартирка, например">
           </div>
           <div class="form__row">
             <div class="form__element">
               <label for="type">Тип жилья</label>
               <select id="type">
-                <option selected>Квартира</option>
-                <option>Лачуга</option>
-                <option>Дворец</option>
+                <option selected value="">Квартира</option>
+                <option value="">Лачуга</option>
+                <option value="">Дворец</option>
               </select>
             </div>
             <div class="form__element">
@@ -140,16 +140,16 @@
             <div class="form__element">
               <label for="room_number">Кол-во комнат</label>
               <select id="room_number">
-                <option selected>1 комната</option>
-                <option>2 комнаты</option>
-                <option>100 комнат</option>
+                <option selected value="">1 комната</option>
+                <option value="">2 комнаты</option>
+                <option value="">100 комнат</option>
               </select>
             </div>
             <div class="form__element">
               <label for="capacity">Количество мест</label>
               <select id="capacity">
-                <option selected>для 3 гостей</option>
-                <option>не для гостей</option>
+                <option selected value="">для 3 гостей</option>
+                <option value="">не для гостей</option>
               </select>
             </div>
           </div>
@@ -167,17 +167,17 @@
             <div class="form__element">
               <label for="time">Время заезда и выезда</label>
               <select id="time">
-                <option selected>После 12</option>
-                <option>После 13</option>
-                <option>После 14</option>
+                <option selected value="">После 12</option>
+                <option value="">После 13</option>
+                <option value="">Поле 14</option>
               </select>
             </div>
             <div class="form__element">
               <label for="timeout">&nbsp;</label>
               <select id="timeout" title="Time to go out">
-                <option selected>Выезд до 12</option>
-                <option>Выезд до 13</option>
-                <option>Выезд до 14</option>
+                <option selected value="">Выезд до 12</option>
+                <option value="">Выезд до 13</option>
+                <option value="">Выезд до 14</option>
               </select>
             </div>
           </div>
@@ -255,6 +255,7 @@
     </nav>
   </div>
 </footer>
-
+<!-- <script> alert('Введите число, от 1000 до 1000000');</script> -->
+<script src="js/form.js" type="application/javascript"></script>
 </body>
 </html>
