--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <div class="pin" style="left: 400px;top: 400px"><img src="img/avatars/simpson.png" alt="User Avatar" class="rounded" width="40" height="40"></div>
       <div class="pin"><img src="img/avatars/default.png" alt="User Avatar" class="rounded" width="40" height="40"></div>
     </div>
-    <div class="dialog dialog__invisible">
+    <div class="dialog">
       <div class="dialog__title"><img src="img/avatars/avatar.png" alt="Avatar" width="70" height="70">
         <a href="#" class="dialog__close"><img src="img/close.svg" alt="close" width="22" height="22"></a>
       </div>
@@ -126,9 +126,9 @@
             <div class="form__element">
               <label for="type">Тип жилья</label>
               <select id="type">
-                <option selected value="">Квартира</option>
-                <option value="">Лачуга</option>
-                <option value="">Дворец</option>
+                <option selected value="appartment">Квартира</option>
+                <option value="hovel">Лачуга</option>
+                <option value="palace">Дворец</option>
               </select>
             </div>
             <div class="form__element">
@@ -140,16 +140,16 @@
             <div class="form__element">
               <label for="room_number">Кол-во комнат</label>
               <select id="room_number">
-                <option selected value="">1 комната</option>
-                <option value="">2 комнаты</option>
-                <option value="">100 комнат</option>
+                <option selected value="1">1 комната</option>
+                <option value="2">2 комнаты</option>
+                <option value="100">100 комнат</option>
               </select>
             </div>
             <div class="form__element">
               <label for="capacity">Количество мест</label>
               <select id="capacity">
-                <option selected value="">для 3 гостей</option>
-                <option value="">не для гостей</option>
+                <option selected value="3">для 3 гостей</option>
+                <option value="0">не для гостей</option>
               </select>
             </div>
           </div>
@@ -167,17 +167,17 @@
             <div class="form__element">
               <label for="time">Время заезда и выезда</label>
               <select id="time">
-                <option selected value="">После 12</option>
-                <option value="">После 13</option>
-                <option value="">Поле 14</option>
+                <option selected value="12">После 12</option>
+                <option value="13">После 13</option>
+                <option value="14">Поле 14</option>
               </select>
             </div>
             <div class="form__element">
               <label for="timeout">&nbsp;</label>
               <select id="timeout" title="Time to go out">
-                <option selected value="">Выезд до 12</option>
-                <option value="">Выезд до 13</option>
-                <option value="">Выезд до 14</option>
+                <option selected value="12">Выезд до 12</option>
+                <option value="13">Выезд до 13</option>
+                <option value="14">Выезд до 14</option>
               </select>
             </div>
           </div>
@@ -255,7 +255,6 @@
     </nav>
   </div>
 </footer>
-<!-- <script> alert('Введите число, от 1000 до 1000000');</script> -->
 <script src="js/form.js" type="application/javascript"></script>
 </body>
 </html>
