synchrinization has corrected

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             <div class="form__element">
               <label for="type">Тип жилья</label>
               <select id="type">
-                <option selected value="appartment">Квартира</option>
+                <option selected value="apartment">Квартира</option>
                 <option value="hovel">Лачуга</option>
                 <option value="palace">Дворец</option>
               </select>
