--- a/index.html
+++ b/index.html
@@ -255,6 +255,7 @@
     </nav>
   </div>
 </footer>
+<script src="js/show-card.js"></script>
 <script src="js/initialize-pins.js" type="application/javascript"></script>
 <script src="js/synchronize-fields.js" type="application/javascript"></script>
 <script src="js/form.js" type="application/javascript"></script>
