--- a/index.html
+++ b/index.html
@@ -241,6 +241,11 @@
       <button class="form__submit" type="submit">Опубликовать</button>
     </form>
   </div>
+  <template id="pin-template">
+    <div class="pin">
+      <img src="" alt="" class="rounded" width="40" height="40">
+    </div>
+  </template>
 </main>
 <footer class="footer container">
   <div class="center-wrapper">
@@ -255,6 +260,7 @@
     </nav>
   </div>
 </footer>
+<script src="js/load.js"></script>
 <script src="js/show-card.js"></script>
 <script src="js/initialize-pins.js" type="application/javascript"></script>
 <script src="js/synchronize-fields.js" type="application/javascript"></script>
