--- a/index.html
+++ b/index.html
@@ -67,9 +67,7 @@
     </div>
     <div class="tokyo__pin-map">
       <div class="pin pin__main" role="button" aria-pressed="false" tabindex="0"><img src="img/main-pin-image.png" alt="Main Pin" class="rounded" width="40" height="44"></div>
-      <div class="pin" style="left: 700px;top: 350px" role="button" aria-pressed="false" tabindex="0"><img src="img/avatars/avatar.png" alt="User Avatar" class="rounded" width="40" height="40"></div>
-      <div class="pin" style="left: 400px;top: 400px" role="button" aria-pressed="false" tabindex="0"><img src="img/avatars/simpson.png" alt="User Avatar" class="rounded" width="40" height="40"></div>
-      <div class="pin" role="button" aria-pressed="false" tabindex="0"><img src="img/avatars/default.png" alt="User Avatar" class="rounded" width="40" height="40"></div>
+
     </div>
     <div class="dialog" role="dialog" tabindex="0" style="display: none">
       <div class="dialog__title"><img src="img/avatars/avatar.png" alt="Avatar" width="70" height="70">
@@ -241,11 +239,7 @@
       <button class="form__submit" type="submit">Опубликовать</button>
     </form>
   </div>
-  <template id="pin-template">
-    <div class="pin">
-      <img src="" alt="" class="rounded" width="40" height="40">
-    </div>
-  </template>
+
 </main>
 <footer class="footer container">
   <div class="center-wrapper">
@@ -260,6 +254,14 @@
     </nav>
   </div>
 </footer>
+
+<template id="pin-template">
+  <div class="pin" role="button" aria-pressed="false" tabindex="0">
+    <img src="" alt="" class="rounded" width="40" height="40">
+  </div>
+</template>
+
+<script src="js/render-pin.js"></script>
 <script src="js/load.js"></script>
 <script src="js/show-card.js"></script>
 <script src="js/initialize-pins.js" type="application/javascript"></script>
