--- a/index.html
+++ b/index.html
@@ -261,6 +261,25 @@
   </div>
 </template>
 
+<template id="dialog-template">
+  <div class="dialog" role="dialog" tabindex="0" style="display: none">
+    <div class="dialog__title"><img src="img/avatars/avatar.png" alt="Avatar" width="70" height="70">
+      <a href="#" class="dialog__close" role="button" ><img src="img/close.svg" alt="close" width="22" height="22"></a>
+    </div>
+    <div class="dialog__panel">
+        <h3 class="lodge__title">Уютное гнездышко для молодоженов</h3>
+        <p class="lodge__address">102-0082 Tōkyō-to, Chiyoda-ku, Ichibanchō, 14−3</p>
+        <h3 class="lodge__price">5200&#x20bd;/ночь</h3>
+        <h4 class="lodge__type">Квартира</h4>
+        <p class="lodge__rooms-and-guests">2 комнаты для 3 гостей</p>
+        <p class="lodge__checkin-time">Заезд после 14:00, выезд до 10:00</p>
+
+        <p class="lodge__description">Великолепная квартира-студия в центре Токио. Подходит как туристам, там и
+          бизнесменам. Квартира полностью укомплектована и имеет свежий ремонт.</p>
+    </div>
+  </div>
+</template>
+
 <script src="js/render-pin.js"></script>
 <script src="js/load.js"></script>
 <script src="js/show-card.js"></script>
