--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
             <div class="form__element">
               <label for="type">Тип жилья</label>
               <select id="type">
-                <option selected value="apartment">Квартира</option>
-                <option value="hovel">Лачуга</option>
+                <option selected value="flat">Квартира</option>
+                <option value="bungalo">Лачуга</option>
                 <option value="palace">Дворец</option>
               </select>
             </div>
@@ -248,10 +248,10 @@
 
 <template id="pin-template">
   <div class="pin" role="button" aria-pressed="false" tabindex="0">
-    <img src="" alt="" class="rounded" width="40" height="40">
+     <img src="" alt="" class="rounded" width="40" height="40">
   </div>
 </template>
-
+<script src="js/filters.js"></script>
 <script src="js/render-pin.js"></script>
 <script src="js/load.js"></script>
 <script src="js/show-card.js"></script>
